[package]
name = "learn-rust"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
    "modules/module1",
    "modules/module2",
    "modules/module3",
    "modules/module4",
    "minigrep",
    "inheritance",
    "patterns/behavioral/state",
    "patterns/behavioral/chain_responsibility",
    "patterns/behavioral/iterator",
    "patterns/behavioral/memento",
]
